--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".LoginScreen">
 
     <ImageView
@@ -27,36 +28,39 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="240dp"
         android:layout_marginEnd="260dp"
-        android:text="@string/username"
+        android:text="@string/Email"
+        android:textAllCaps="true"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
+        app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/etEmailLogin"
         android:layout_width="346dp"
         android:layout_height="50dp"
         android:layout_marginStart="31dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="31dp"
-        android:background="@drawable/oval_rectangle"
+        android:background="@color/inserttext"
         android:ems="10"
-        android:hint="@string/username_info"
+        android:hint="Enter your Email"
         android:inputType="text"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textAllCaps="false"
+        android:textColor="@color/text"
+        android:textColorHint="@color/text"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -69,28 +73,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <EditText
-        android:id="@+id/editTextText4"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="346dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
         android:layout_marginTop="53dp"
         android:layout_marginEnd="31dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/oval_rectangle"
+        app:endIconMode="password_toggle"
+        app:hintEnabled="false"
+    app:hintAnimationEnabled="false"
+    android:hint="@string/password_info"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/etEmailLogin">
+
+    <EditText
+        android:id="@+id/etPasswordLogin"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/inserttext"
         android:ems="10"
-        android:hint="@string/password_info"
+        android:hint="Enter Password"
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+        android:textColor="@color/text"
+        android:textColorHint="@color/text"
+        android:textStyle="normal" />
+</com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/textView9"
@@ -115,13 +125,13 @@
         android:layout_marginBottom="5dp"
         android:text="@string/continueasaguest"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
