--- a/app/src/main/res/layout/activity_signup_screen_business.xml
+++ b/app/src/main/res/layout/activity_signup_screen_business.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SignupScreen">
 
     <ImageView
@@ -42,11 +43,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="SignupScreen"
         android:paddingEnd="50dp"
         android:text="@string/customer"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:onClick="SignupScreen"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -111,13 +112,13 @@
         android:text="@string/Business_name"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
+        app:layout_constraintBottom_toTopOf="@+id/etEmailRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/etEmailRegister"
         android:layout_width="350dp"
         android:layout_height="40dp"
         android:layout_marginStart="31dp"
@@ -145,7 +146,7 @@
         app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />
 
     <EditText
         android:id="@+id/editTextPhone"
@@ -236,13 +237,13 @@
         android:text="@string/password2"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintBottom_toTopOf="@+id/etPasswordRegister"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/etPasswordRegister"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginStart="30dp"
@@ -255,7 +256,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnRegister"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="41dp"
@@ -263,11 +264,11 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="25dp"
         android:backgroundTint="#000000"
-        android:text="@string/Create"
         android:onClick="LoginScreen"
+        android:text="@string/Create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
+        app:layout_constraintStart_toEndOf="@+id/etPasswordRegister"
         app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
